# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
brain_games/: __init__.py  brain_even.py  cli.py  engine.py  index.py
brain_games/games/: __init__.py  calc.py  cli.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
